maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:6: error: not found: value sommeAngle
    sommeAngle = sommeAngle + 1
    ^Escaper:15: error: not found: value sommeAngle
        sommeAngle = sommeAngle - 1
        ^